--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -23,7 +23,7 @@ blazar_package_state: latest
 blazar_pip_package_state: latest
 
 blazar_git_repo: https://git.openstack.org/openstack/blazar
-blazar_git_install_branch: master
+blazar_git_install_branch: stable/rocky
 blazar_developer_mode: false
 
 blazar_venv_tag: untagged
