Update messaging notification configuration
This patch add the conditional inclusion of the notification
section of the service configuration. This ensures that oslo.messaging
notifications use the correct transport for deployments that have
separate rpc and notify messaging backends. For example, if the
transport_url is not provided in the notification section of the
service configuration, the transport_url specified in the default
section will be used instead.

This patch conditionally selects the notifier driver. The noop
driver will be selected when notification publishing is disabled.
The messagingv2 driver is selected when notification publishing is
enabled.

Change-Id: I2b4c4a119fa300fb5b64eaaf947e3c688bdb6e84
Closes-Bug: #1794320

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -26,6 +26,9 @@ blazar_git_repo: https://git.openstack.org/openstack/blazar
 blazar_git_install_branch: master
 blazar_developer_mode: false
 
+# Enable/Disable Ceilometer
+blazar_ceilometer_enabled: False
+
 # TODO(odyssey4me):
 # This can be simplified once all the roles are using
 # python_venv_build. We can then switch to using a
