Add the MQ vhost/user creation and configuration
Change-Id: If92a53d9447c09e9a1388ca99b25380bb301b1bf

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -66,14 +66,31 @@
     - blazar-config
     - systemd-service
 
+- include_tasks: mq_setup.yml
+  when:
+    - "inventory_hostname == ((groups['blazar_all'] | intersect(ansible_play_hosts)) | list)[0]"
+  with_items:
+    - oslomsg_setup_host: "{{ blazar_oslomsg_rpc_setup_host }}"
+      oslomsg_userid: "{{ blazar_oslomsg_rpc_userid }}"
+      oslomsg_password: "{{ blazar_oslomsg_rpc_password }}"
+      oslomsg_vhost: "{{ blazar_oslomsg_rpc_vhost }}"
+      oslomsg_transport: "{{ blazar_oslomsg_rpc_transport }}"
+    - oslomsg_setup_host: "{{ blazar_oslomsg_notify_setup_host }}"
+      oslomsg_userid: "{{ blazar_oslomsg_notify_userid }}"
+      oslomsg_password: "{{ blazar_oslomsg_notify_password }}"
+      oslomsg_vhost: "{{ blazar_oslomsg_notify_vhost }}"
+      oslomsg_transport: "{{ blazar_oslomsg_notify_transport }}"
+  tags:
+    - blazar-config
+
 - include_tasks: blazar_db_setup.yml
   when:
-    - "inventory_hostname == ((groups['blazar_all']| intersect(ansible_play_hosts)) | list)[0]"
+    - "inventory_hostname == ((groups['blazar_all'] | intersect(ansible_play_hosts)) | list)[0]"
   tags:
     - blazar-config
 
 - include_tasks: blazar_service_setup.yml
   when:
-    - "inventory_hostname == ((groups['blazar_all']| intersect(ansible_play_hosts)) | list)[0]"
+    - "inventory_hostname == ((groups['blazar_all'] | intersect(ansible_play_hosts)) | list)[0]"
   tags:
     - blazar-config
