Default MQ RPC/Notify credentials/vhosts to match
When the RPC and Notify service are the same, the credentials
must match - otherwise the tasks to create the user/password
will overwrite with each other.

If the two clusters are different, then the matching credentials
and vhost will not be a problem. However, if the deployer really
wishes to make sure they're different, then the vars can be
overridden.

Also, to ensure that the SSL value is consistently set in the
conf file, we apply the bool filter. We also use the 'notify'
SSL setting as the messaging system for Notifications is more
likely to remain rabbitmq in our default deployment with qrouterd
becoming the default for RPC messaging.

Change-Id: I48b1e9f10a32caba099493303518d9fee9fec7f1
Signed-off-by: Taseer <taseer94@gmail.com>

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -139,8 +139,9 @@ blazar_oslomsg_notify_transport: "{{ oslomsg_notify_transport | default('rabbit'
 blazar_oslomsg_notify_servers: "{{ oslomsg_notify_servers | default('127.0.0.1') }}"
 blazar_oslomsg_notify_port: "{{ oslomsg_notify_port | default('5672') }}"
 blazar_oslomsg_notify_use_ssl: "{{ oslomsg_notify_use_ssl | default(False) }}"
-blazar_oslomsg_notify_userid: blazar
-blazar_oslomsg_notify_vhost: /blazar
+blazar_oslomsg_notify_userid: "{{ blazar_oslomsg_rpc_userid }}"
+blazar_oslomsg_notify_vhost: "{{ blazar_oslomsg_rpc_vhost }}"
+blazar_oslomsg_notify_password: "{{ blazar_oslomsg_rpc_password }}"
 
 blazar_role_name: admin
 blazar_bind_address: 0.0.0.0
