Update role for new source build process
The variables blazar_developer_mode and blazar_venv_download
no longer carry any meaning. This review changes blazar to
do the equivalent of what developer_mode was all the time,
meaning that it always builds the venv and never requires
the repo server, but it will use a repo server when available.

As part of this, we move the source build out of its own file
because it's now a single task to include the venv build role.
This is just to make it easier to follow the code.

It looks like the project now needs authentication for the root
of the host so we'll test for that instead of 204.

Change-Id: Id1dc8d378cb57d6ab2b59da76468a4a0859466b1

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -25,29 +25,16 @@ blazar_pip_package_state: latest
 
 blazar_git_repo: https://git.openstack.org/openstack/blazar
 blazar_git_install_branch: master
-blazar_developer_mode: false
+blazar_upper_constraints_url: "{{ requirements_git_url | default('https://git.openstack.org/cgit/openstack/requirements/plain/upper-constraints.txt?h=' ~ requirements_git_install_branch | default('master')) }}"
 
 # Enable/Disable Ceilometer
 blazar_ceilometer_enabled: False
 
-# TODO(odyssey4me):
-# This can be simplified once all the roles are using
-# python_venv_build. We can then switch to using a
-# set of constraints in pip.conf inside the venv,
-# perhaps prepared by giving a giving a list of
-# constraints to the role.
-blazar_pip_install_args: >-
-  {{ blazar_developer_mode | ternary(pip_install_developer_constraints | default('--constraint /opt/developer-pip-constraints.txt'), '') }}
-  {{ (pip_install_upper_constraints is defined) | ternary('--constraint ' + pip_install_upper_constraints | default(''), '') }}
-  {{ pip_install_options | default('') }}
+blazar_pip_install_args: "{{ pip_install_options | default('') }}"
 
 blazar_venv_tag: "{{ venv_tag | default('untagged') }}"
 blazar_bin: "/openstack/venvs/blazar-{{ blazar_venv_tag }}/bin"
 
-# venv_download, even when true, will use the fallback method of building the
-# venv from scratch if the venv download fails.
-blazar_venv_download: "{{ not blazar_developer_mode | bool }}"
-blazar_venv_download_url: http://127.0.0.1/venvs/untagged/ubuntu/blazar.tgz
 blazar_etc_dir: /etc/blazar
 blazar_config_option: "--config-file {{ blazar_etc_dir }}/blazar.conf"
 
@@ -60,9 +47,10 @@ blazar_pip_packages:
   - python-blazarclient
   - systemd-python
 
-## blazar developer constraint
-blazar_developer_constraints:
+## blazar constraints
+blazar_git_constraints:
   - "git+{{ blazar_git_repo }}@{{ blazar_git_install_branch }}#egg=blazar"
+  - "--constraint {{ blazar_upper_constraints_url }}"
 
 ## System info
 blazar_system_user_name: blazar
