Test using integrated build
In order to do a more complete verification of any patches,
we add a full uncontainerised OpenStack deployment to do the
functional testing using the integrated repo. This replaces
the previous functional test mechanism.

Any additional role tests are left as-is. They will require
some extra implementation in the integrated build before they
can be transferred.

Depends-On: https://review.openstack.org/647840
Depends-On: https://review.openstack.org/648502
Depends-On: https://review.openstack.org/648551
Change-Id: Ib62c054823523d5136ff1d3ed68d886ab43de68a

--- a/zuul.d/project.yaml
+++ b/zuul.d/project.yaml
@@ -15,13 +15,16 @@
 - project:
     templates:
       - check-requirements
+      - openstack-ansible-linters
       - publish-openstack-docs-pti
       - release-notes-jobs-python3
     check:
       jobs:
-        - openstack-ansible-linters
-        - openstack-ansible-functional-ubuntu-xenial
+        - openstack-ansible-deploy-aio_metal_blazar-ubuntu-bionic
     gate:
       jobs:
-        - openstack-ansible-linters
-        - openstack-ansible-functional-ubuntu-xenial
+        - openstack-ansible-deploy-aio_metal_blazar-ubuntu-bionic
+    experimental:
+      jobs:
+        - openstack-ansible-deploy-aio_metal_blazar-centos-7
+        - openstack-ansible-deploy-aio_metal_blazar-opensuse-150
