debian: add support
This patch adds the Debian jobs for this role to make sure
it's always passing as well as updates the meta to reflect
it's support of Debian accordingly.

Depends-On: I9a92b73c419a0dc1cca40dacfef75de61a61db94
Change-Id: I3bf65f8188421a7442b0a7b7aec293ec45bbd7ee

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -23,6 +23,9 @@ galaxy_info:
   license: Apache2
   min_ansible_version: 2.3
   platforms:
+  - name: Debian
+    versions:
+    - stretch
   - name: Ubuntu
     versions:
     - xenial
