--- a/zuul.d/jobs.yaml
+++ b/zuul.d/jobs.yaml
@@ -35,3 +35,11 @@
     vars:
       action: deploy
       scenario: aio_metal_blazar
+
+- job:
+    name: openstack-ansible-deploy-aio_metal_blazar-debian-stable
+    parent: openstack-ansible-deploy-aio
+    nodeset: debian-stable
+    vars:
+      action: deploy
+      scenario: aio_metal_blazar
