Clarify supported SUSE versions
This role only support openSUSE Leap 15, not 42.3, not tumbleweed.
Saying all is confusing and a bad practice. This fixes it, while
ensuring the job is properly defined to test that assertion.

Change-Id: I74645638e0482acb43c627df2bad9a4c8ad7090b

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -29,6 +29,9 @@ galaxy_info:
   - name: Ubuntu
     versions:
     - xenial
+  - name: opensuse
+    versions:
+    - 15
   galaxy_tags:
     - cloud
     - python
