Replace include with import
During previous commit include_task was accidentally copy-pasted.

Change-Id: Id42d77095754fefff640a4d48c6a3f48f2997f25

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -106,7 +106,7 @@
     - blazar-config
     - systemd-service
 
-- include_tasks: service_setup.yml
+- import_tasks: service_setup.yml
   vars:
     _service_adminuri_insecure: "{{ keystone_service_adminuri_insecure }}"
     _service_in_ldap: "{{ blazar_service_in_ldap }}"
