Add missing common-mq tag
Change-Id: I577ed59fd5e192677139cf5f54d73abc78505009
(cherry picked from commit f3e02ed6887d4360a4fcc02dae17a4ab4e114a39)

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -55,6 +55,7 @@
     _oslomsg_notify_vhost: "{{ blazar_oslomsg_notify_vhost }}"
     _oslomsg_notify_transport: "{{ blazar_oslomsg_notify_transport }}"
   tags:
+    - common-mq
     - blazar-config
 
 - import_tasks: blazar_pre_install.yml
