Replace git.openstack.org with opendev.org
This patch replaces git.openstack.org with opendev.org as redirection
from old path was enabled.
Also we change upper constraints url due to [1]

[1] http://lists.openstack.org/pipermail/openstack-discuss/2019-May/006478.html

Depends-On: https://review.opendev.org/693841/
Change-Id: I124f77a92a9d34a55c1c39f1e27cde49bb3bd7aa

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -23,9 +23,9 @@ blazar_service_setup_host_python_interpreter: "{{ openstack_service_setup_host_p
 blazar_package_state: latest
 blazar_pip_package_state: latest
 
-blazar_git_repo: https://git.openstack.org/openstack/blazar
+blazar_git_repo: https://opendev.org/openstack/blazar
 blazar_git_install_branch: master
-blazar_upper_constraints_url: "{{ requirements_git_url | default('https://git.openstack.org/cgit/openstack/requirements/plain/upper-constraints.txt?h=' ~ requirements_git_install_branch | default('master')) }}"
+blazar_upper_constraints_url: "{{ requirements_git_url | default('https://releases.openstack.org/constraints/upper/' ~ requirements_git_install_branch | default('master')) }}"
 
 # Enable/Disable Ceilometer
 blazar_ceilometer_enabled: False
