--- a/tox.ini
+++ b/tox.ini
@@ -34,14 +34,14 @@ deps = -r{toxinidir}/doc/requirements.txt
 commands =
     bash -c "rm -rf doc/build"
     doc8 doc
-    sphinx-build --keep-going -b html doc/source doc/build/html
+    sphinx-build -W --keep-going -b html doc/source doc/build/html
 
 [testenv:pdf-docs]
 deps = {[testenv:docs]deps}
 whitelist_externals =
   make
 commands =
-  sphinx-build -W --keep-going -b latex doc/source doc/build/pdf
+  sphinx-build --keep-going -b latex doc/source doc/build/pdf
   make -C doc/build/pdf
 
 [doc8]
