--- a/vars/debian.yml
+++ b/vars/debian.yml
@@ -19,17 +19,17 @@ cache_timeout: 600
 blazar_distro_packages:
   - git
   - gcc
-  - python-dev
-  - python-antlr3
+  - python3-dev
+  - python3-antlr3
   - libxml2
   - libxslt1-dev
   - libzip-dev
   - build-essential
   - libssl-dev
   - libffi-dev
-  - python-setuptools
-  - python-mysqldb
-  - python-systemd
+  - python3-setuptools
+  - python3-mysqldb
+  - python3-systemd
 
 blazar_devel_distro_packages:
   - build-essential
