Use the utility host for db setup tasks
Move it to the service setup host (defaults to utility[0]) instead
of the galera[0] host, and use galera_address (defaults to internal VIP)
as the endpoint instead of a local connection on the db host.

Change-Id: I731f05f07a92696292c1aa5bdde99089d34566a3

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -31,6 +31,9 @@
     - "inventory_hostname == ((groups['blazar_all'] | intersect(ansible_play_hosts)) | list)[0]"
   vars:
     _oslodb_setup_host: "{{ blazar_db_setup_host }}"
+    _oslodb_ansible_python_interpreter: "{{ blazar_db_setup_python_interpreter }}"
+    _oslodb_setup_endpoint: "{{ blazar_galera_address }}"
+    _oslodb_setup_port: "{{ blazar_galera_port }}"
     _oslodb_databases:
       - name: "{{ blazar_galera_database }}"
         users:
