--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -60,12 +60,14 @@ blazar_system_comment: blazar system user
 blazar_system_user_home: "/var/lib/{{ blazar_system_user_name }}"
 
 ## Database credentials
-blazar_db_setup_host: "{{ ('galera_all' in groups) | ternary(groups['galera_all'][0], 'localhost') }}"
+blazar_db_setup_host: "{{ openstack_db_setup_host | default('localhost') }}"
+blazar_db_setup_python_interpreter: "{{ openstack_db_setup_python_interpreter | default((blazar_db_setup_host == 'localhost') | ternary(ansible_playbook_python, ansible_python['executable'])) }}"
 blazar_galera_address: "{{ galera_address | default('127.0.0.1') }}"
 blazar_galera_database: blazar
 blazar_galera_user: blazar
 blazar_galera_use_ssl: "{{ galera_use_ssl | default(False) }}"
 blazar_galera_ssl_ca_cert: "{{ galera_ssl_ca_cert | default('/etc/ssl/certs/galera-ca.pem') }}"
+blazar_galera_port: 3306
 
 ## Service Type and Data
 blazar_service_name: blazar
