Define condition for the first play host one time
We use the same condition, which defines against what host some "service"
tasks should run against, several times. It's hard to keep it the same
across the role and ansible spending additional resources to evaluate
it each time, so it's simpler and better for the maintenance to set
a boolean variable which will say for all tasks, that we want to run
only against signle host, if they should run or not now.

Change-Id: I6f1937c329292028e772fbe96d2466000726e4b7

--- a/vars/main.yml
+++ b/vars/main.yml
@@ -13,6 +13,8 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
+_blazar_is_first_play_host: "{{ (blazar_services['blazar-api']['group'] in group_names and inventory_hostname == ((groups[blazar_services['blazar-api']['group']] | intersect(ansible_play_hosts)) | list)[0]) | bool }}"
+
 #
 # Compile a list of the services on a host based on whether
 # the host is in the host group and the service is enabled.
