--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -28,7 +28,7 @@
 
 - import_tasks: db_setup.yml
   when:
-    - "inventory_hostname == ((groups['blazar_all'] | intersect(ansible_play_hosts)) | list)[0]"
+    - _blazar_is_first_play_host
   vars:
     _oslodb_setup_host: "{{ blazar_db_setup_host }}"
     _oslodb_ansible_python_interpreter: "{{ blazar_db_setup_python_interpreter }}"
@@ -45,7 +45,7 @@
 
 - import_tasks: mq_setup.yml
   when:
-    - "inventory_hostname == ((groups['blazar_all'] | intersect(ansible_play_hosts)) | list)[0]"
+    - _blazar_is_first_play_host
   vars:
     _oslomsg_rpc_setup_host: "{{ blazar_oslomsg_rpc_setup_host }}"
     _oslomsg_rpc_userid: "{{ blazar_oslomsg_rpc_userid }}"
@@ -88,7 +88,7 @@
 
 - import_tasks: blazar_db_setup.yml
   when:
-    - "inventory_hostname == ((groups['blazar_all'] | intersect(ansible_play_hosts)) | list)[0]"
+    - _blazar_is_first_play_host
   tags:
     - blazar-config
 
@@ -137,6 +137,6 @@
         type: "{{ blazar_service_type }}"
         description: "{{ blazar_service_description }}"
   when:
-    - "inventory_hostname == ((groups['blazar_all'] | intersect(ansible_play_hosts)) | list)[0]"
+    - _blazar_is_first_play_host
   tags:
     - blazar-config
