Remove references to unsupported operating systems
All references to Gentoo, SUSE, Debian stretch and Centos-7  are removed.
Conditional tasks, ternary operators and variables are simplified where possible
OS specific variables files are generalised where possible

Change-Id: I3781543c5f5005d578a4010ac8ff41dbdcc8407a

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -25,13 +25,11 @@ galaxy_info:
   platforms:
   - name: Debian
     versions:
-    - stretch
+      - buster
   - name: Ubuntu
     versions:
-    - xenial
-  - name: opensuse
-    versions:
-    - 15
+      - bionic
+      - focal
   galaxy_tags:
     - cloud
     - python
