Allow to override blazar policy files
We implement `blazar_policy_overrides` variable in order to allow
management of balazar policy files when needed.

Change-Id: I581a9c9659d3d023eb40cf2c6dfc2d01fa0a7464

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -139,6 +139,7 @@ blazar_program_name: blazar-server
 
 ## Tunable overrides
 blazar_blazar_api_paste_ini_overrides: {}
+blazar_policy_overrides: {}
 blazar_blazar_conf_overrides: {}
 blazar_api_init_config_overrides: {}
 blazar_manager_init_config_overrides: {}
